# Anomaly-Detection-Robot

./: CMakeLists.txt  package.xml  readme.md
.github/: build_and_coveralls.yml
.github/workflows/: build_and_coveralls.yml
include/anomaly_detection_robot/: ADRobot.h  detect_anomaly.h  navigation.h  perception.h
src/: ADRobot.cpp  detect_anomaly.cpp  navigation.cpp  node.cpp  perception.cpp
test/: all_tests.test  main.cpp
